src/ccu/pllab/tcgen/testdataRunner/TestDataParser.java
// Generated from TestData.g4 by ANTLR 4.4
package ccu.pllab.tcgen.testdataRunner;

	//�o�����O�N�Ojava���Yimport�������A�]��.g4�ɻPXXXParser.java�O�s�����Y�A
	//�ҥH���ઽ���bXXXParser.java�W�Kimport�A�@���s�ɴN�|�Q�~���A
	//�]���p�G�nimport���ɭԡA�b@header���Y�[
	import ccu.pllab.tcgen.SymbolTable.*;
	import ccu.pllab.tcgen.AbstractType.*;
	import ccu.pllab.tcgen.typeTestData.*;
	import ccu.pllab.tcgen.exe.main.*;
	import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TestDataParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__14=1, T__13=2, T__12=3, T__11=4, T__10=5, T__9=6, T__8=7, T__7=8, T__6=9, 
		T__5=10, T__4=11, T__3=12, T__2=13, T__1=14, T__0=15, STRING=16, REAL=17, 
		BOOL=18, INTEGER=19, NUMBER=20, PUNCT=21, PUNCT2=22, CNTRL=23, LETTER=24, 
		WS=25;
	public static final String[] tokenNames = {
		"<INVALID>", "'OBJ'", "'ARG'", "'[[]]'", "'[]('", "'_POST'", "'EXCEPTION'", 
		"'['", "'RETVAL'", "'_PRE'", "']'", "'='", "'[]'", "': '", "')'", "','", 
		"STRING", "REAL", "BOOL", "INTEGER", "NUMBER", "PUNCT", "PUNCT2", "CNTRL", 
		"LETTER", "WS"
	};
	public static final int
		RULE_testDataList = 0, RULE_testData = 1, RULE_exceptionState = 2, RULE_itemState = 3, 
		RULE_itemName = 4, RULE_time = 5, RULE_elms = 6, RULE_objElmList = 7, 
		RULE_objElm = 8, RULE_typeData = 9, RULE_list = 10, RULE_array = 11, RULE_realBoundList = 12;
	public static final String[] ruleNames = {
		"testDataList", "testData", "exceptionState", "itemState", "itemName", 
		"time", "elms", "objElmList", "objElm", "typeData", "list", "array", "realBoundList"
	};

	@Override
	public String getGrammarFileName() { return "TestData.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TestDataParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TestDataListContext extends ParserRuleContext {
		public VariableType type;
		public String className;
		public String methodName;
		public List<MethodTestData> methodTestData;
		public TestDataContext data;
		public List<TerminalNode> INTEGER() { return getTokens(TestDataParser.INTEGER); }
		public TestDataContext testData(int i) {
			return getRuleContext(TestDataContext.class,i);
		}
		public TerminalNode INTEGER(int i) {
			return getToken(TestDataParser.INTEGER, i);
		}
		public List<TestDataContext> testData() {
			return getRuleContexts(TestDataContext.class);
		}
		public TestDataListContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TestDataListContext(ParserRuleContext parent, int invokingState, VariableType type, String className, String methodName) {
			super(parent, invokingState);
			this.type = type;
			this.className = className;
			this.methodName = methodName;
		}
		@Override public int getRuleIndex() { return RULE_testDataList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).enterTestDataList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).exitTestDataList(this);
		}
	}

	public final TestDataListContext testDataList(VariableType type,String className,String methodName) throws RecognitionException {
		TestDataListContext _localctx = new TestDataListContext(_ctx, getState(), type, className, methodName);
		enterRule(_localctx, 0, RULE_testDataList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((TestDataListContext)_localctx).methodTestData =  new ArrayList<MethodTestData>();
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INTEGER) {
				{
				{
				setState(27); match(INTEGER);
				setState(28); match(T__2);
				setState(29); ((TestDataListContext)_localctx).data = testData( type, className, methodName);

				 			(_localctx.methodTestData).add(((TestDataListContext)_localctx).data.data);
				 			
				 		
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TestDataContext extends ParserRuleContext {
		public VariableType type;
		public String className;
		public String methodName;
		public MethodTestData data;
		public ItemStateContext item;
		public ExceptionStateContext exitem;
		public List<ItemStateContext> itemState() {
			return getRuleContexts(ItemStateContext.class);
		}
		public ItemStateContext itemState(int i) {
			return getRuleContext(ItemStateContext.class,i);
		}
		public ExceptionStateContext exceptionState() {
			return getRuleContext(ExceptionStateContext.class,0);
		}
		public TestDataContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TestDataContext(ParserRuleContext parent, int invokingState, VariableType type, String className, String methodName) {
			super(parent, invokingState);
			this.type = type;
			this.className = className;
			this.methodName = methodName;
		}
		@Override public int getRuleIndex() { return RULE_testData; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).enterTestData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).exitTestData(this);
		}
	}

	public final TestDataContext testData(VariableType type,String className,String methodName) throws RecognitionException {
		TestDataContext _localctx = new TestDataContext(_ctx, getState(), type, className, methodName);
		enterRule(_localctx, 2, RULE_testData);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			ArrayList<ArrayList<TypeTestData>> dataList = new ArrayList<ArrayList<TypeTestData>>(); 
			setState(42); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(38); ((TestDataContext)_localctx).item = itemState(type,methodName);

				 			(dataList).add(((TestDataContext)_localctx).item.item);
				 		
				setState(40); match(T__0);
				}
				}
				setState(44); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__13) | (1L << T__7))) != 0) );
			setState(46); ((TestDataContext)_localctx).exitem = exceptionState();

			 	 	dataList.add(((TestDataContext)_localctx).exitem.item);
			 	 	((TestDataContext)_localctx).data =  new MethodTestData(className,methodName,dataList);
			 	 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExceptionStateContext extends ParserRuleContext {
		public ArrayList<TypeTestData> item;
		public Token exStr;
		public TerminalNode STRING() { return getToken(TestDataParser.STRING, 0); }
		public ExceptionStateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exceptionState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).enterExceptionState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).exitExceptionState(this);
		}
	}

	public final ExceptionStateContext exceptionState() throws RecognitionException {
		ExceptionStateContext _localctx = new ExceptionStateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_exceptionState);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); match(T__9);
			setState(50); match(T__4);
			setState(56);
			switch (_input.LA(1)) {
			case T__3:
				{
				setState(51); match(T__3);
				}
				break;
			case T__12:
				{
				setState(52); match(T__12);
				}
				break;
			case T__8:
				{
				setState(53); match(T__8);
				setState(54); ((ExceptionStateContext)_localctx).exStr = match(STRING);
				setState(55); match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}

			 		ExceptionTestData exdata = null;
			 		((ExceptionStateContext)_localctx).item =  new ArrayList<TypeTestData>();
			 		if(((ExceptionStateContext)_localctx).exStr != null){
			 			exdata = new ExceptionTestData((((ExceptionStateContext)_localctx).exStr!=null?((ExceptionStateContext)_localctx).exStr.getText():null));
			 			(_localctx.item).add(exdata);
			 		}
			 	
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ItemStateContext extends ParserRuleContext {
		public VariableType type;
		public String method;
		public ArrayList<TypeTestData> item;
		public ItemNameContext itemclass;
		public ElmsContext ele;
		public ElmsContext elms() {
			return getRuleContext(ElmsContext.class,0);
		}
		public ItemNameContext itemName() {
			return getRuleContext(ItemNameContext.class,0);
		}
		public ItemStateContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ItemStateContext(ParserRuleContext parent, int invokingState, VariableType type, String method) {
			super(parent, invokingState);
			this.type = type;
			this.method = method;
		}
		@Override public int getRuleIndex() { return RULE_itemState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).enterItemState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).exitItemState(this);
		}
	}

	public final ItemStateContext itemState(VariableType type,String method) throws RecognitionException {
		ItemStateContext _localctx = new ItemStateContext(_ctx, getState(), type, method);
		enterRule(_localctx, 6, RULE_itemState);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); ((ItemStateContext)_localctx).itemclass = itemName();
			setState(61); match(T__4);
			setState(62); ((ItemStateContext)_localctx).ele = elms( type, method, ((ItemStateContext)_localctx).itemclass.itemClass);

			 		if(((ItemStateContext)_localctx).itemclass.itemClass.equals("obj")){
			 			TypeTestData userTestData =  new UserDefinedTypeTestData(((ItemStateContext)_localctx).ele.eleDataList, type);
			 			((ItemStateContext)_localctx).item =  new ArrayList<TypeTestData>();
			 			_localctx.item.add(userTestData);
			 		}else{
			 			((ItemStateContext)_localctx).item =  ((ItemStateContext)_localctx).ele.eleDataList;
			 		}
			 		
			 	
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ItemNameContext extends ParserRuleContext {
		public String itemClass;
		public Token objStr;
		public Token argStr;
		public TimeContext time() {
			return getRuleContext(TimeContext.class,0);
		}
		public ItemNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_itemName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).enterItemName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).exitItemName(this);
		}
	}

	public final ItemNameContext itemName() throws RecognitionException {
		ItemNameContext _localctx = new ItemNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_itemName);
		try {
			setState(74);
			switch (_input.LA(1)) {
			case T__14:
			case T__13:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				switch (_input.LA(1)) {
				case T__14:
					{
					setState(65); ((ItemNameContext)_localctx).objStr = match(T__14);
					((ItemNameContext)_localctx).itemClass =  "obj";
					}
					break;
				case T__13:
					{
					setState(67); ((ItemNameContext)_localctx).argStr = match(T__13);
					((ItemNameContext)_localctx).itemClass =  "arg";
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(71); time();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(72); match(T__7);
				 ((ItemNameContext)_localctx).itemClass =  "ret";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeContext extends ParserRuleContext {
		public TimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).enterTime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).exitTime(this);
		}
	}

	public final TimeContext time() throws RecognitionException {
		TimeContext _localctx = new TimeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_time);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_la = _input.LA(1);
			if ( !(_la==T__10 || _la==T__6) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElmsContext extends ParserRuleContext {
		public VariableType type;
		public String method;
		public String inputType;
		public ArrayList<TypeTestData> eleDataList;
		public ObjElmListContext ele;
		public ObjElmListContext objElmList() {
			return getRuleContext(ObjElmListContext.class,0);
		}
		public ElmsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ElmsContext(ParserRuleContext parent, int invokingState, VariableType type, String method, String inputType) {
			super(parent, invokingState);
			this.type = type;
			this.method = method;
			this.inputType = inputType;
		}
		@Override public int getRuleIndex() { return RULE_elms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).enterElms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).exitElms(this);
		}
	}

	public final ElmsContext elms(VariableType type,String method,String inputType) throws RecognitionException {
		ElmsContext _localctx = new ElmsContext(_ctx, getState(), type, method, inputType);
		enterRule(_localctx, 12, RULE_elms);
		try {
			enterOuterAlt(_localctx, 1);
			{
			((ElmsContext)_localctx).eleDataList =  new ArrayList<TypeTestData>();
				 ArrayList<VariableType> elemTypeList = new ArrayList<VariableType>(); 
					if(type instanceof UserDefinedType){
						if(inputType.equals("obj")){
							for( VariableToken var : type.getSymbolTable().getAttribute().values()){
								elemTypeList.add(var.getType());
							}
						}else if(inputType.equals("arg")){
							for( VariableToken var : type.getSymbolTable().getMethod().get(method).getArgument().values()){
								elemTypeList.add(var.getType());
							}
						}else if(inputType.equals("ret")){
							elemTypeList.add( type.getSymbolTable().getMethod().get(method).getReturnType());
						}
					}else{
						elemTypeList.add(type);
					}
					
				
			setState(85);
			switch (_input.LA(1)) {
			case T__3:
				{
				setState(79); match(T__3);
				}
				break;
			case T__8:
				{
				setState(80); match(T__8);
				setState(81); ((ElmsContext)_localctx).ele = objElmList(type,method,inputType,elemTypeList);
				setState(82); match(T__5);

				 		((ElmsContext)_localctx).eleDataList =  ((ElmsContext)_localctx).ele.testdata;
				 	
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjElmListContext extends ParserRuleContext {
		public VariableType type;
		public String method;
		public String inputType;
		public ArrayList<VariableType> elemTypeList;
		public ArrayList<TypeTestData> testdata;
		public ObjElmContext ele;
		public ObjElmContext ele1;
		public List<ObjElmContext> objElm() {
			return getRuleContexts(ObjElmContext.class);
		}
		public ObjElmContext objElm(int i) {
			return getRuleContext(ObjElmContext.class,i);
		}
		public ObjElmListContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ObjElmListContext(ParserRuleContext parent, int invokingState, VariableType type, String method, String inputType, ArrayList<VariableType> elemTypeList) {
			super(parent, invokingState);
			this.type = type;
			this.method = method;
			this.inputType = inputType;
			this.elemTypeList = elemTypeList;
		}
		@Override public int getRuleIndex() { return RULE_objElmList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).enterObjElmList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).exitObjElmList(this);
		}
	}

	public final ObjElmListContext objElmList(VariableType type,String method,String inputType,ArrayList<VariableType> elemTypeList) throws RecognitionException {
		ObjElmListContext _localctx = new ObjElmListContext(_ctx, getState(), type, method, inputType, elemTypeList);
		enterRule(_localctx, 14, RULE_objElmList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			int eleCount = 0; 
				((ObjElmListContext)_localctx).testdata =  new ArrayList<TypeTestData>();
				
			setState(88); ((ObjElmListContext)_localctx).ele = objElm(elemTypeList.get(eleCount));

			 		(_localctx.testdata).add(((ObjElmListContext)_localctx).ele.objElmTestdata);
			 		if(elemTypeList.size() > eleCount + 1)
			 			eleCount++;
			 	
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(90); match(T__0);
				setState(91); ((ObjElmListContext)_localctx).ele1 = objElm(elemTypeList.get(eleCount));

				 			(_localctx.testdata).add(((ObjElmListContext)_localctx).ele1.objElmTestdata);
				 			if(elemTypeList.size() > eleCount + 1)
				 				eleCount++;
				 		
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjElmContext extends ParserRuleContext {
		public VariableType type;
		public TypeTestData objElmTestdata;
		public TypeDataContext typedata;
		public TypeDataContext typeData() {
			return getRuleContext(TypeDataContext.class,0);
		}
		public ObjElmContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ObjElmContext(ParserRuleContext parent, int invokingState, VariableType type) {
			super(parent, invokingState);
			this.type = type;
		}
		@Override public int getRuleIndex() { return RULE_objElm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).enterObjElm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).exitObjElm(this);
		}
	}

	public final ObjElmContext objElm(VariableType type) throws RecognitionException {
		ObjElmContext _localctx = new ObjElmContext(_ctx, getState(), type);
		enterRule(_localctx, 16, RULE_objElm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99); ((ObjElmContext)_localctx).typedata = typeData(type);
			((ObjElmContext)_localctx).objElmTestdata =  ((ObjElmContext)_localctx).typedata.data;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDataContext extends ParserRuleContext {
		public VariableType type;
		public TypeTestData data;
		public Token bool;
		public Token intstr;
		public RealBoundListContext realBound;
		public Token str;
		public ArrayContext arrayData;
		public ListContext listTestData;
		public TerminalNode BOOL() { return getToken(TestDataParser.BOOL, 0); }
		public TerminalNode INTEGER() { return getToken(TestDataParser.INTEGER, 0); }
		public RealBoundListContext realBoundList() {
			return getRuleContext(RealBoundListContext.class,0);
		}
		public TerminalNode STRING() { return getToken(TestDataParser.STRING, 0); }
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TypeDataContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TypeDataContext(ParserRuleContext parent, int invokingState, VariableType type) {
			super(parent, invokingState);
			this.type = type;
		}
		@Override public int getRuleIndex() { return RULE_typeData; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).enterTypeData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TestDataListener ) ((TestDataListener)listener).exitTypeData(this);
		}
	}

	public final TypeDataContext typeData(VariableType type) throws RecognitionException {
		TypeDataContext _localctx = new TypeDataContext(_ctx, getState(), type);
		enterRule(_localctx, 18, RULE_typeData);
		try {
			setState(120);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102); match(T__3);
				((TypeDataContext)_localctx).data =  new VoidTypeTestData();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104); ((TypeDataContext)_localctx).bool = match(BOOL);
				 ((TypeDataContext)_localctx).data =  new BooleanTypeTestData((((TypeDataContext)_localctx).bool!=null?((TypeDataContext)_localctx).bool.getText():null));
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(106); ((TypeDataContext)_localctx).intstr = match(INTEGER);
				((TypeDataContext)_localctx).data =  new IntTypeTestData((((TypeDataContext)_localctx).intstr!=null?((TypeDataContext)_localctx).intstr.getText():null));
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(108); ((TypeDataContext)_localctx).realBound = realBoundList();
				((TypeDataContext)_localctx).data =  new RealTypeTestData((((TypeDataContext)_localctx).realBound.realBound).get(0),(((TypeDataContext)_localctx).realBound.realBound).get(1));
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(111); ((TypeDataContext)_localctx).str = match(STRING);
				 ((TypeDataContext)_localctx).data =  new StringTypeTestData((((TypeDataContext)_localctx).str!=null?((TypeDataContext)_localctx).str.getText():null));
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(113); ((TypeDataContext)_localctx).arrayData = array(type);
				((TypeDataContext)_localctx).data =  new ArrayTypeTestData(((TypeDataContext)_localctx).arrayData.arrayTestdata,type);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(116); ((TypeDataContext)_localctx).listTestData = list(type);

				 		if(type instanceof ArrayListType){
				 			((TypeDataContext)_localctx).data =  new ArrayListTypeTestData(((TypeDataContext)_localctx).listTestData.listdata,type);
				 		}else{
				 			((TypeDataContext)_localctx).data =  new UserDefinedTypeTestData(((TypeDataContext)_localctx).listTestData.listdata,type);
				 		}
				 	
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				((TypeDataContext)_localctx).data =  new VoidTypeTestData();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
